Fix: White Gap on right side

--- a/web/index.html
+++ b/web/index.html
@@ -211,12 +211,12 @@
 	</div>
     <div ng-view></div>
 	
-  </div>
+  
   
   <hr>
+  <div class="container-fluid">
       <div align="center" ng-controller="AboutController">
-		   
-	  <div class="row">
+        <div class="row">
 		  <div class="col-sm-4"><img src="images/logo48.png"><p><strong>Bewerbungsapp</strong></p><p>Version: {{version}}</p><p>Copyright © 2016 by <a href="https://www.xzessmedia.de" target="_blank">xzessmedia</a></p></div>
 	  <div class="col-sm-4"><div class="fb-like" data-href="https://www.facebook.com/bewerbungsapp/" data-layout="standard" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div></div>
 	  <div class="col-sm-4"> <p><a href="https://www.facebook.com/bewerbungsapp/" target="_blank"><img height="48px" width="48px" src="images/fb_icon_325x325.png"></a></p></div>
@@ -227,7 +227,7 @@
 	<h2>Plattform Downloads:</h2></br><p><a href="https://www.bewerbungsapp.eu/download/bewerbungsapp-fuer-windows/" target="_blank"><img src="images/square_win10.png"></a><a href="https://www.bewerbungsapp.eu/download/bewerbungsapp-fuer-chrome-os/"><img src="images/square_chromeOS.png" target="_blank"></a><a href="https://www.bewerbungsapp.eu/download/bewerbungsapp-fuer-android/"><img src="images/square_android.png" target="_blank"></a></p><p>{{ 'general.InfoText1' | i18n }}</p><p>{{ 'general.InfoText2' | i18n }}</p><p>{{ 'general.InfoText3' | i18n }}</p></div>
 
 		
-  
-  
+  </div>
+  </div>
 </body>
 </html>
