--- a/web/index.html
+++ b/web/index.html
@@ -16,6 +16,7 @@
   <title>Bewerbungs-Studio App</title>
   <script src="js/jquery/jquery-3.1.0.js"></script> 
   <script src="js/bootstrap-3.3.7/js/bootstrap.js"></script> 
+  <script src="https://apis.google.com/js/client.js"></script>
   <link rel="stylesheet" href="js/font-awesome-4.6.3/css/font-awesome.min.css">
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <link rel="stylesheet" href="js/bootstrap-3.3.7/css/bootstrap_flatly.css">
@@ -50,73 +51,77 @@
 <meta name="msapplication-TileImage" content="icons/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
  
-  <script src="https://apis.google.com/js/client.js"></script>
-  <script src="js/summernote-0.8.2/summernote.js"></script>
-  <script src="js/angular-1.5.8/angular.js"></script>
-  <script src="js/angular-1.5.8/i18n/angular-locale_de-de.js"></script>
-  <script src="js/angular-1.5.8/angular-animate.js"></script>
-  <script src="js/angular-1.5.8/angular-sanitize.js"></script>
-  <script src="js/angular-1.5.8/angular-route.js"></script>
-  <script src="js/angular-1.5.8/angular-cookies.js"></script>
-  <script src="js/angular-1.5.8/angular-modal-service.js"></script>
-  <script src="js/angular-1.5.8/angular-summernote.js"></script>
-   <script src="js/angular-1.5.8/satellizer.js"></script>
-   <script src="js/angular-1.5.8/modules/ngDialog/js/ngDialog.js"></script>
-   <script src="js/angular-1.5.8/modules/ngStorage/ngStorage.js"></script>
-   <script src="js/angular-1.5.8/modules/ngFacebook/ngFacebook.js"></script>
-   <script src="js/angular-1.5.8/modules/soap/soapclient.js"></script>
-   <script src="js/angular-1.5.8/modules/soap/angular.soap.js"></script>
-   <script src="js/angular-1.5.8/modules/ngGapi/gapi.js"></script>
-   <script src="js/angular-1.5.8/modules/ngBase64Upload/dist/angular-base64-upload.js"></script>
-   <script src="js/angular-1.5.8/modules/angular-loading-bar/build/loading-bar.js"></script>
-   <script src="js/angular-1.5.8/modules/angular-ui-tree/dist/angular-ui-tree.js"></script>
-   <script src="js/angular-1.5.8/modules/angular-toastr/dist/angular-toastr.tpls.js"></script>
-   <script src="js/angular-1.5.8/modules/fileupload/lvl-uuid.js"></script>
-   <script src="js/angular-1.5.8/modules/fileupload/lvl-file-upload.js"></script>
-   <script src="js/angular-1.5.8/modules/fileupload/lvl-xhr-post.js"></script>
-   <script src="js/angular-1.5.8/modules/angular-localization/dist/angular-localization.js"></script>
-   <script src="js/angular-1.5.8/modules/ngCordova/dist/ng-cordova.js"></script>
+<script src="https://apis.google.com/js/client.js"></script>
+<script src="js/summernote-0.8.2/summernote.js"></script>
+<script src="js/angular-1.5.8/angular.js"></script>
+<script src="js/angular-1.5.8/i18n/angular-locale_de-de.js"></script>
+<script src="js/angular-1.5.8/angular-animate.js"></script>
+<script src="js/angular-1.5.8/angular-sanitize.js"></script>
+<script src="js/angular-1.5.8/angular-route.js"></script>
+<script src="js/angular-1.5.8/angular-cookies.js"></script>
+<script src="js/angular-1.5.8/angular-modal-service.js"></script>
+<script src="js/angular-1.5.8/angular-summernote.js"></script>
+<script src="js/angular-1.5.8/satellizer.js"></script>
+<script src="js/angular-1.5.8/modules/ngDialog/js/ngDialog.js"></script>
+<script src="js/angular-1.5.8/modules/ngStorage/ngStorage.js"></script>
+<script src="js/angular-1.5.8/modules/ngFacebook/ngFacebook.js"></script>
+<script src="js/angular-1.5.8/modules/soap/soapclient.js"></script>
+<script src="js/angular-1.5.8/modules/soap/angular.soap.js"></script>
+<script src="js/angular-1.5.8/modules/ngGapi/gapi.js"></script>
+<script src="js/angular-1.5.8/modules/ngBase64Upload/dist/angular-base64-upload.js"></script>
+<script src="js/angular-1.5.8/modules/angular-loading-bar/build/loading-bar.js"></script>
+<script src="js/angular-1.5.8/modules/angular-ui-tree/dist/angular-ui-tree.js"></script>
+<script src="js/angular-1.5.8/modules/angular-toastr/dist/angular-toastr.tpls.js"></script>
+<script src="js/angular-1.5.8/modules/fileupload/lvl-uuid.js"></script>
+<script src="js/angular-1.5.8/modules/fileupload/lvl-file-upload.js"></script>
+<script src="js/angular-1.5.8/modules/fileupload/lvl-xhr-post.js"></script>
+<script src="js/angular-1.5.8/modules/angular-localization/dist/angular-localization.js"></script>
+<script src="js/angular-1.5.8/modules/ngCordova/dist/ng-cordova.js"></script>
+<script src="js/angular-1.5.8/modules/ng-csv/build/ng-csv.js"></script>
+<script src="js/angular-1.5.8/modules/angular-GAPI/lib/angular-GAPI.js"></script>
+<script src="js/angular-1.5.8/modules/angular-GAPI/lib/gapi.drive.factory.js"></script>
+<script src="js/angular-1.5.8/modules/angular-GAPI/lib/gapi.calendar.factory.js"></script>
    
-  <script src="app.js"></script>
-  <script src="js/application/config/config_language.js"></script>
-  <script src="js/application/config/config_compileprovider.js"></script>
-  <script src="js/application/config/config_routeprovider.js"></script>
-  <script src="js/application/config/config_authprovider.js"></script>
-  <script src="js/application/config/config_facebookprovider.js"></script>
-  <script src="js/application/run/app_run.js"></script>
-  <script src="js/application/filters/filter_phone.js"></script>
-  <script src="js/application/directives/directive_fileread.js"></script>
-  <script src="js/application/directives/directive_phoneinput.js"></script>
-  <script src="js/application/directives/directive_filemodel.js"></script>
-  <script src="js/application/directives/directive_fileselect.js"></script>
-  <script src="js/application/directives/directive_numbersonly.js"></script>
-  <script src="js/application/services/service_fileupload.js"></script>
-  <script src="js/application/services/service_data.js"></script>
-  <script src="js/application/factories/factory_soap.js"></script>
-  <script src="js/application/factories/factory_jsonlocaldataprovider.js"></script>
-  <script src="js/application/factories/factory_facebookhelper.js"></script>
-  <script src="js/application/factories/factory_appdata.js"></script>
-  <script src="js/application/factories/factory_restservice.js"></script>
-  <script src="js/application/factories/factory_appsettings.js"></script>
-  <script src="js/application/controllers/controller_communityinfo.js"></script>
-  <script src="js/application/controllers/controller_ideas.js"></script>
-  <script src="js/application/controllers/controller_personal.js"></script>
-  <script src="js/application/controllers/controller_design.js"></script>
-  <script src="js/application/controllers/controller_content.js"></script>
-  <script src="js/application/controllers/controller_import.js"></script>
-  <script src="js/application/controllers/controller_startpage.js"></script>
-  <script src="js/application/controllers/controller_saveapplication.js"></script>
-  <script src="js/application/controllers/controller_loadapplication.js"></script>
-  <script src="js/application/controllers/controller_login.js"></script>
-  <script src="js/application/controllers/controller_about.js"></script>
-  <script src="js/application/controllers/controller_organiser.js"></script>
-  <script src="js/application/controllers/controller_bugreport.js"></script>
-  <script src="js/application/controllers/controller_beruf.js"></script>
-  <script src="js/application/controllers/controller_kenntnisse.js"></script>
-  <script src="js/application/controllers/controller_settings.js"></script>
-  <script src="js/application/controllers/controller_menu.js"></script>
-  <script src="js/application/controllers/controller_bewerbungen.js"></script>
-  <script src="js/application/upload.js"></script>
+<script src="app.js"></script>
+<script src="js/application/config/config_language.js"></script>
+<script src="js/application/config/config_compileprovider.js"></script>
+<script src="js/application/config/config_routeprovider.js"></script>
+<script src="js/application/config/config_authprovider.js"></script>
+<script src="js/application/config/config_facebookprovider.js"></script>
+<script src="js/application/run/app_run.js"></script>
+<script src="js/application/filters/filter_phone.js"></script>
+<script src="js/application/directives/directive_fileread.js"></script>
+<script src="js/application/directives/directive_phoneinput.js"></script>
+<script src="js/application/directives/directive_filemodel.js"></script>
+<script src="js/application/directives/directive_fileselect.js"></script>
+<script src="js/application/directives/directive_numbersonly.js"></script>
+<script src="js/application/services/service_fileupload.js"></script>
+<script src="js/application/services/service_data.js"></script>
+<script src="js/application/factories/factory_soap.js"></script>
+<script src="js/application/factories/factory_jsonlocaldataprovider.js"></script>
+<script src="js/application/factories/factory_facebookhelper.js"></script>
+<script src="js/application/factories/factory_appdata.js"></script>
+<script src="js/application/factories/factory_restservice.js"></script>
+<script src="js/application/factories/factory_appsettings.js"></script>
+<script src="js/application/controllers/controller_communityinfo.js"></script>
+<script src="js/application/controllers/controller_ideas.js"></script>
+<script src="js/application/controllers/controller_personal.js"></script>
+<script src="js/application/controllers/controller_design.js"></script>
+<script src="js/application/controllers/controller_content.js"></script>
+<script src="js/application/controllers/controller_import.js"></script>
+<script src="js/application/controllers/controller_startpage.js"></script>
+<script src="js/application/controllers/controller_saveapplication.js"></script>
+<script src="js/application/controllers/controller_loadapplication.js"></script>
+<script src="js/application/controllers/controller_login.js"></script>
+<script src="js/application/controllers/controller_about.js"></script>
+<script src="js/application/controllers/controller_organiser.js"></script>
+<script src="js/application/controllers/controller_bugreport.js"></script>
+<script src="js/application/controllers/controller_beruf.js"></script>
+<script src="js/application/controllers/controller_kenntnisse.js"></script>
+<script src="js/application/controllers/controller_settings.js"></script>
+<script src="js/application/controllers/controller_menu.js"></script>
+<script src="js/application/controllers/controller_bewerbungen.js"></script>
+<script src="js/application/upload.js"></script>
   
   
   
